--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
+    "vertical-timeline-component-for-react": "^1.0.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -28,10 +29,16 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "plugin:@shopify/typescript",
+      "plugin:@shopify/react",
+      "plugin:@shopify/prettier"
+    ],
+    "rules": {
+      "@shopify/jsx-no-hardcoded-content": "off",
+      "react/jsx-no-target-blank": "off"
+    }
   },
+  "prettier": "@shopify/prettier-config",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -43,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@shopify/eslint-plugin": "^40.1.0",
+    "@shopify/prettier-config": "^1.1.2",
+    "eslint": "^7.23.0"
   }
 }
