--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@shopify/eslint-plugin": "^40.1.0",
     "@shopify/prettier-config": "^1.1.2",
-    "eslint": "^7.23.0"
+    "eslint": "^7.23.0",
+    "prettier": "^2.2.1"
   }
 }
