Remove timelineData.tsx from .eslintignore

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ],
     "rules": {
       "@shopify/jsx-no-hardcoded-content": "off",
+      "@typescript-eslint/consistent-type-definitions": "off",
       "react/jsx-no-target-blank": "off",
       "no-console": "off"
     }
