--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
         "destination": "/index.html"
       },
       {
-        "source": "resume",
+        "source": "/resume",
         "destination": "/resume.pdf"
       }
     ]
