--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.3",
     "vertical-timeline-component-for-react": "^1.0.7",
     "web-vitals": "^1.1.1"
@@ -28,11 +28,6 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "plugin:@shopify/typescript",
-      "plugin:@shopify/react",
-      "plugin:@shopify/prettier"
-    ],
     "rules": {
       "@shopify/jsx-no-hardcoded-content": "off",
       "@typescript-eslint/consistent-type-definitions": "off",
@@ -54,9 +49,6 @@
     ]
   },
   "devDependencies": {
-    "@shopify/eslint-plugin": "^40.1.0",
-    "@shopify/prettier-config": "^1.1.2",
-    "eslint": "^7.23.0",
     "prettier": "^2.2.1"
   }
 }
